--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(53, 120, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    width: 600px;
+    height: 600px;
+    background-color: rgb(255, 246, 67);
+    border: 5px solid rgb(255, 247, 128);
+}
+
+.box{
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 4px 0px 2px 4px;
+    border: 5px solid rgb(255, 97, 97);
+    height: 100px;
+    width: 100px;
+    background-color: rgb(255, 42, 42);
+}
